<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/seven_days_ago"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorYellow"
        android:orientation="vertical"
        app:layout_constraintHeight_percent=".1428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OneWeekAgo"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/six_days_ago"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorGreen"
        android:orientation="vertical"
        app:layout_constraintHeight_percent=".1428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_days_ago"
        app:layout_constraintWidth_percent=".6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_days_ago"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/five_days_ago"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorGreen"
        android:orientation="vertical"
        app:layout_constraintHeight_percent=".1428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/six_days_ago"
        app:layout_constraintWidth_percent=".6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_days_ago"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/four_days_ago"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorGreen"
        android:orientation="vertical"
        app:layout_constraintHeight_percent=".1428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five_days_ago"
        app:layout_constraintWidth_percent=".6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_days_ago"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/three_days_ago"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorGreen"
        android:orientation="vertical"
        app:layout_constraintHeight_percent=".1428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_days_ago"
        app:layout_constraintWidth_percent=".6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_days_ago"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/two_days_ago"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorGreen"
        android:orientation="vertical"
        app:layout_constraintHeight_percent=".1428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/three_days_ago"
        app:layout_constraintWidth_percent=".6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_days_ago"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/one_day_ago"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorGreen"
        android:orientation="vertical"
        app:layout_constraintHeight_percent=".1428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_days_ago"
        app:layout_constraintWidth_percent=".6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_day_ago"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>